enhanced ui && fixed calculation modal non issue

--- a/src/config/localization/translations.json
+++ b/src/config/localization/translations.json
@@ -31,7 +31,6 @@
   "Coming soon": "Coming soon",
   "APY": "APY",
   "Total Liquidity": "Total Liquidity",
-  "View on BscScan": "View on BscScan",
   "LYD price": "LYD price",
   "%asset% Tokens Earned": "%asset% Tokens Earned",
   "%num% blocks until farming ends": "%num% blocks until farming ends",
@@ -91,7 +90,7 @@
   "The project gets the AVAX, LydiaFinance burns the LYD.": "The project gets the AVAX, LydiaFinance burns the LYD.",
   "You get the tokens.": "You get the tokens.",
   "Want to launch your own IFO?": "Want to launch your own IFO?",
-  "Launch your project with LydiaFinance, Avalanche most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.": "Launch your project with LydiaFinance, Avalanche most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on BSC.",
+  "Launch your project with LydiaFinance, Avalanche most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on AVAX.": "Launch your project with LydiaFinance, Avalanche most-used AMM project and liquidity provider, to bring your token directly to the most active and rapidly growing community on AVAX.",
   "Apply to launch": "Apply to launch",
   "Community": "Community",
   "Core": "Core",
