--- a/src/config/localization/translations.json
+++ b/src/config/localization/translations.json
@@ -380,13 +380,13 @@
   "Activate your Profile": "Activate your Profile",
   "You’ll need an active LydiaFinance Profile to take part in an IFO!": "You’ll need an active LydiaFinance Profile to take part in an IFO!",
   "Profile Active!": "Profile Active!",
-  "Get LYD-AVAX LP Tokens": "Get LYD-AVAX LP Tokens",
-  "Stake LYD and AVAX in the liquidity pool to get LP tokens.": "Stake LYD and AVAX in the liquidity pool to get LP tokens.",
+  "Get LYD-AVAX LP Tokens": "Get AVAX-USDT.e LP Tokens",
+  "Stake LYD and AVAX in the liquidity pool to get LP tokens.": "Stake AVAX and USDT.e in the liquidity pool to get LP tokens.",
   "You’ll spend them to buy IFO sale tokens.": "You’ll spend them to buy IFO sale tokens.",
   "Commit LP Tokens": "Commit LP Tokens",
   "When the IFO sales are live, you can “commit” your LP tokens to buy the tokens being sold.": "We recommend committing to the Basic Sale first, but you can do both if you want.",
   "Claim your tokens and achievement": "Claim your tokens and achievement",
-  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent LYD-AVAX LP tokens will be returned to your wallet.": "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent LYD-AVAX LP tokens will be returned to your wallet.",
+  "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent LYD-AVAX LP tokens will be returned to your wallet.": "After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent AVAX-USDT.e LP tokens will be returned to your wallet.",
   "This round's closing transaction has been submitted to the blockchain, and is waiting to be confirmed.": "This round's closing transaction has been submitted to the blockchain, and is waiting to be confirmed.",
   "No prediction history available": "No prediction history available",
   "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.": "If you are sure you should see history here, make sure you’re connected to the correct wallet and try again.",
